--- a/index.html
+++ b/index.html
@@ -1,1 +1,25 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en-us">
+<head>
+  <meta charset="UTF-8">
+  <title>MaryClare Colombo</title>
+</head>
+
+<body>
+<!-- Header -->
+<h1>MaryClare Colombo</h1>
+
+<!-- Image -->
+<img src="images/mc.jpeg" alt="maryclare headshot" height="350"/>
+
+<p>My name is MaryClare Colombo and I am a data science and visualization bootcamp student. </p>
+
+<ul>
+<li><a href="https://linkedin.com/in/maryclarecolombo" target="_blank">LinkedIn</a></li>
+<li><a href="https://twitter.com/maryclarecc">Twitter</a></li>
+</ul>
+
+</body>
+
+</html>
+
